cabal-version:   3.0
name:            viewprof
version:         0.0.1.0
synopsis:        Text-based interactive GHC .prof viewer
description:
  viewprof is a text-based interactive GHC .prof viewer.
  .
  You can find a screenshot and some explanation in
  <https://github.com/maoe/viewprof#readme the README>.

homepage:        https://github.com/maoe/viewprof
bug-reports:     https://github.com/maoe/viewprof/issues
license-file:    LICENSE
license:         BSD-3-Clause
author:          Mitsutoshi Aoe
maintainer:      Mitsutoshi Aoe <me@maoe.name>
copyright:       Copyright (C) 2016-2020 Mitsutoshi Aoe
category:        Development
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  img/screenshot.png
  README.md

tested-with:     GHC ==9.2.8

executable viewprof
  main-is:          viewprof.hs
  build-depends:
    , base               ^>=4.16
    , brick              ^>=1.9
    , containers         ^>=0.6.5
    , directory          ^>=1.3.6
    , ghc-prof           ^>=1.4.1
    , lens               ^>=5.2.2
    , scientific         ^>=0.3.7
    , text               ^>=1.2.5
    , vector             ^>=0.13.0
    , vector-algorithms  ^>=0.9.0
    , vty                ^>=5.38

  hs-source-dirs:   bin
  default-language: Haskell2010
  ghc-options:      -Wall -threaded

source-repository head
  type:     git
  location: https://github.com/maoe/viewprof.git
